--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "com.google.gms.google-services"
-    id "com.google.firebase.firebase-perf"
     id "com.google.firebase.crashlytics"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
@@ -70,18 +69,9 @@ android {
         ndk.abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86_64'
     }
 
-    signingConfigs {
-        release {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-            storePassword keystoreProperties['storePassword']
-        }
-    }
-
     buildTypes {
         release {
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
         }
 
         debug {
